fix overflow issue

--- a/static/global.css
+++ b/static/global.css
@@ -138,6 +138,9 @@ table {
   border-collapse: collapse;
   font-size: 1.125em;
   margin: 2em 0;
+  display: block;
+  overflow-x: auto;
+  white-space: nowrap;
 }
 
 th {
